--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-byt-detail",
+  "name": "vue-byt-detail-v3.2",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.32",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
