--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
-    "Vue.volar",
-    "dbaeumer.vscode-eslint",
-    "EditorConfig.EditorConfig"
+    // "Vue.volar",
+    // "dbaeumer.vscode-eslint",
+    // "EditorConfig.EditorConfig"
   ]
 }
